<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="hello">Hello World, MessageActivity!</string>
	<string name="app_name">VS Chat 2014</string>

	<!-- REGISTER -->
	
	<string name="welcome_string">Connect to the VS Chat Server...</string>
	<string name="username_string">Enter your nethz</string>
	<string name="number_string">(Opt.) Number</string>

	<!-- CHAT -->
	
	<string name="unknown">unknown</string>
	<string name="joined">joined</string>
	<string name="left">left</string>
	<string name="enter_chat_greetings">Welcome to chat</string>
	<string name="main_empty_list">There is no recent conversation, write new message
		to start one.</string>
	<string name="send_button">Send</string>
	
	<!-- DIALOG MESSAGES -->
	
	<string name="login_failed">Login failed</string>
	<string name="login">Login</string>
	<string name="unLogin">Deregistration in progress</string>
	<string name="please_wait">Please wait...</string>
	<string name="sending">Sending...</string>
	<string name="no_network_connectivity">No network connectivity</string>
	<string name="error">Error</string>
	<string name="ok">OK</string>
	<string name="system">System</string>
	<string name="deregistration_failed">Deregistation failed</string>

</resources>